--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.1",
-    "typescript": "^5.4.5",
+    "typescript": "^4.x",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +48,9 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
+  },
+  "resolutions": {
+    "@typescript-eslint/eslint-plugin": "6.x",
+    "@typescript-eslint/parser": "6.x"
   }
 }
