--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+next features
+- Car page
+    Images that toggle image 4 images each
+Notification when cart is changed
+    item is added to cart
+404 page
+
+
+
 # dependencies
 /node_modules
 /.pnp
